--- a/.github/workflows/src-mirror.yml
+++ b/.github/workflows/src-mirror.yml
@@ -8,17 +8,18 @@ on:
 jobs:
   zip-and-upload:
     runs-on: ubuntu-24.04
-#
+
     steps:
       - name: Sync source to Artifactory
         uses: nrfconnect/action-src-mirror@development
         with:
           git-ref: ${{ github.ref_name }}
           git-fetch-depth: '0'
-          path: 'workspace/applicationsource'
+          path: 'workspace/ncs-example-application'
           west-update-args: '--group-filter=+babblesim'
           artifactory-url: 'https://eu.files.nordicsemi.com/artifactory'
           artifactory-repository: 'ncs-src-mirror'
+          artifactory-target-prefix: 'external/jacitest'
           artifactory-user: ${{ secrets.COM_NORDICSEMI_FILES_USERNAME }}
           artifactory-pass: ${{ secrets.COM_NORDICSEMI_FILES_PASSWORD }}
           
